--- a/PizzaOnline2/PizzaOnline2.csproj
+++ b/PizzaOnline2/PizzaOnline2.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FrontendPO\FrontendPO.csproj" />
     <ProjectReference Include="..\PizzaOnline.DAL\PizzaOnline.DAL.csproj" />
     <ProjectReference Include="..\PizzaOnline2.BLL\PizzaOnline2.BLL.csproj" />
   </ItemGroup>
