--- a/FrontPizza/FrontPizza.csproj
+++ b/FrontPizza/FrontPizza.csproj
@@ -17,8 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PizzaOnline.DAL\PizzaOnline.DAL.csproj" />
-    <ProjectReference Include="..\PizzaOnline2.BLL\PizzaOnline2.BLL.csproj" />
+    <ProjectReference Include="..\PizzaOnline2\PizzaOnline2.csproj" />
   </ItemGroup>
 
 </Project>
