--- a/FrontPizza/Properties/launchSettings.json
+++ b/FrontPizza/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:63558",
+      "applicationUrl": "https://localhost:44323/",
       "sslPort": 44323
     }
   },
@@ -18,10 +18,10 @@
     "FrontPizza": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
